# ecsact_lang_csharp

./: .gitignore  BUILD.bazel  CHANGELOG.md  MODULE.bazel  README.md  WORKSPACE.bazel
.github/workflows/: main.yml
csharp_codegen/: BUILD.bazel  csharp_codegen.cc
ecsact/lang-support/: lang-csharp.hh
