module(
    name = "ecsact_lang_csharp",
    version = "0.1.1",
    compatibility_level = 1,
)

bazel_dep(name = "ecsact_runtime", version = "0.5.4")
bazel_dep(name = "ecsact_codegen", version = "0.1.3")
bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "ecsact_lang_cpp", version = "0.3.1")
bazel_dep(name = "bazel_skylib", version = "1.4.2")
