load("//bazel:copts.bzl", "copts")
load("@ecsact_runtime//:codegen_plugin.bzl", "cc_ecsact_codegen_plugin")

package(default_visibility = ["//visibility:public"])

cc_ecsact_codegen_plugin(
    name = "ecsact_csharp_codegen",
    srcs = ["csharp_codegen.cc"],
    copts = copts,
    deps = ["//:support"],
)

filegroup(
    name = "csharp_codegen",
    srcs = [
        ":ecsact_csharp_codegen",
    ],
)
